--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,3 +9,7 @@ cmds = ["npm run build"]
 
 [start]
 cmd = "node .output/server/index.mjs"
+
+[variables]
+NITRO_HOST = "0.0.0.0"
+NIXPACKS_NODE_VERSION = "22"
